# CPP_matrix_github

./: README.md
src/: CMakeLists.txt  Makefile  main.cpp
src/My_s21_matrix_oop/: s21_matrix_oop.cpp  s21_matrix_oop.hpp
src/help_proect/: main.cpp  s21_matrix_oop.cpp  s21_matrix_oop.hpp  test.cpp
src/test_folder/: test1.cpp
